Fix navbar tab overflow on mobile

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -88,8 +88,6 @@ a:visited {
 /**************************************************************************
   NAV BAR 
 */
-/* NEW */
-
 .navbar-container nav {
   position: relative;
   display: flex;
@@ -119,6 +117,7 @@ a:visited {
   margin-top: 0;
   margin-bottom: 0;
   margin-right: 0;
+  padding-left: 0;
 }
 
 a.navbar-item {
@@ -148,9 +147,12 @@ div.navbar-container {
   .navbar-container li {
     grid-column: span 6;
   }
+  a.navbar-item {
+    padding: 0.2rem 0.3rem;
+    display: inline-block;
+    font-size: var(--font-size-small);
+  }
 }
-/* === */
-
 
 .navbar-container {
   border-top: 5px solid #424242;
@@ -168,10 +170,14 @@ div.navbar-container {
 /**************************************************************************
   HOME BIO
 */
+.row.introduction {
+  grid-column-gap: 20px;
+}
+
 .portrait {
   grid-column: span 5;
   text-align: right;
-  margin-right: 20px;
+  /* margin-right: 20px; */
 }
 img.portrait {
   border-radius: 10px;
@@ -209,7 +215,7 @@ img.portrait {
   border-radius: 5px;
   width: 100%;
 }
-.row.grid-gap {
+.row.projects {
   grid-row-gap: 10px;
   grid-column-gap: 10px;
 }
@@ -300,6 +306,7 @@ footer {
   --nav-link-padding: 0.5rem;
   --nav-link-padding-side: 1rem;
 
+  --font-size-small: 15px;
   --font-size-normal: 18px;
   --font-size-large: 24px;
   --font-size-xlarge: 30px;
